Log now correctly displays (not styled). Log visibility logic completed + moved to custom hook folder. Started work on moving log state to custom hook. Update README.

--- a/vn/src/components/App/App.css
+++ b/vn/src/components/App/App.css
@@ -3,6 +3,6 @@
 }
 .log-toggle-button {
     border: 1px dashed cyan;
-    width: 30px;
-    height: 16px;
+    width: auto;
+    height: auto;
 }
