--- a/vn/src/components/LogBox/LogBox.css
+++ b/vn/src/components/LogBox/LogBox.css
@@ -1,9 +1,14 @@
 .log-box {
     border: 2px solid #862e9c;
-    background-color: red;
     height: 100px;
     width: 100px;
 }
 .log-box-entry {
-    border: 1px dotted #ffffff;
+    border: 2px dotted #ffffff;
+    color:cyan;
+}
+.test-box {
+    width:400px;
+    height: 400px;
+    border: 3px solid blue;
 }
